# d6i

./: LICENSE  README.md  pyproject.toml
d6i/: __init__.py  config.json  main.py
